Fix Source description overflow.

--- a/app/src/style/index.less
+++ b/app/src/style/index.less
@@ -911,6 +911,7 @@ ul.source-list {
             margin: 0;
             padding: 0;
             font-style: italic;
+            overflow: hidden;
         }
     }
 
